--- a/5-onboard-with-tap/appsettings.json
+++ b/5-onboard-with-tap/appsettings.json
@@ -15,7 +15,7 @@ For more info see https://aka.ms/dotnet-template-ms-identity-platform
     "Instance": "https://login.microsoftonline.com/",
     "TenantId": "bc253073-688c-4fa3-9cd8-c7a1cef2a5e5",
     "ClientId": "477098eb-afa2-44ee-997d-0c1ceb5f148d",
-    "ClientSecret": "FGQ8Q~IoXascq7r3sCEMocX2IdpqRSI4qSiCacmo",
+    "ClientSecret": "",
     "CallbackPath": "/signin-oidc",
     "TapGroupName": "TAP and SSPR (Employee Onboarding)",
     "AllowedUserAdminRole": "UserAdmin"
