--- a/5-onboard-with-tap/appsettings.json
+++ b/5-onboard-with-tap/appsettings.json
@@ -15,7 +15,7 @@ For more info see https://aka.ms/dotnet-template-ms-identity-platform
     "Instance": "https://login.microsoftonline.com/",
     "TenantId": "bc253073-688c-4fa3-9cd8-c7a1cef2a5e5",
     "ClientId": "477098eb-afa2-44ee-997d-0c1ceb5f148d",
-    "ClientSecret": "",
+    "ClientSecret": "FGQ8Q~IoXascq7r3sCEMocX2IdpqRSI4qSiCacmo",
     "CallbackPath": "/signin-oidc",
     "TapGroupName": "TAP and SSPR (Employee Onboarding)",
     "AllowedUserAdminRole": "UserAdmin"
@@ -43,7 +43,7 @@ For more info see https://aka.ms/dotnet-template-ms-identity-platform
     "Authority": "https://login.microsoftonline.com/",
     "scope": "3db474b9-6a0c-4840-96ac-1fceb342124f/.default",
     "ClientId": "",
-    "ClientSecret": "",
+    "ClientSecret": "FGQ8Q~IoXascq7r3sCEMocX2IdpqRSI4qSiCacmo",
     "CertificateName": "[MAKE EMPTY WHEN NOT USED Or instead of client secret: Enter here the name of a certificate (from the user cert store) as registered with your application]",
     "client_name": "Onboard with TAP sample",
     "Purpose": "To prove your identity",
