--- a/5-onboard-with-tap/appsettings.json
+++ b/5-onboard-with-tap/appsettings.json
@@ -47,7 +47,7 @@ For more info see https://aka.ms/dotnet-template-ms-identity-platform
     "CertificateName": "[MAKE EMPTY WHEN NOT USED Or instead of client secret: Enter here the name of a certificate (from the user cert store) as registered with your application]",
     "client_name": "Onboard with TAP sample",
     "Purpose": "To prove your identity",
-    "DidAuthority": "did:web:verifiedid.entra.microsoft.com:bc253073-688c-4fa3-9cd8-c7a1cef2a5e5:8c015667-49ab-e8de-12d0-9f43cf6629a7",
+    "DidAuthority": "did:web:ricohimmersionexperience.co.uk",
     "includeQRCode": false,
     "includeReceipt": true,
     "allowRevoked": false,
