--- a/6-woodgrove-helpdesk/appsettings.json
+++ b/6-woodgrove-helpdesk/appsettings.json
@@ -11,7 +11,7 @@
     "CookieKey": "state",
     "CookieExpiresInSeconds": 7200,
     "CacheExpiresInSeconds": 300,
-    "CompanyName": "Woodgrove",
+    "CompanyName": "Ricoh Immersion Experience",
     "CompanyLogo": "https://woodgroveemployee.azurewebsites.net/assets/images/banking/logo/logo.svg",
     "UseTeamsWebhook": false,
     "TeamsWebhookURL":  "...set this if you change above to true..."
@@ -19,18 +19,18 @@
 
   "VerifiedID": {
     "ApiEndpoint": "https://verifiedid.did.msidentity.com/v1.0/verifiableCredentials/",
-    "TenantId": "...your tenantId...",
+    "TenantId": "bc253073-688c-4fa3-9cd8-c7a1cef2a5e5",
     "Authority": "https://login.microsoftonline.com/",
     "scope": "3db474b9-6a0c-4840-96ac-1fceb342124f/.default",
-    "ManagedIdentity": true,
+    "ManagedIdentity": false,
     //--- Not needed if you use MSI ("ManagedIdentity": true). Needed if not using MSI
-    "ClientId": "...client id for app with Verified ID permissions",
-    "ClientSecret": "...client secret for app",
-    "CertificateName": "[MAKE EMPTY WHEN NOT USED Or instead of client secret: Enter here the name of a certificate (from the user cert store) as registered with your application]",
+    "ClientId": "477098eb-afa2-44ee-997d-0c1ceb5f148d",
+    "ClientSecret": "FGQ8Q~IoXascq7r3sCEMocX2IdpqRSI4qSiCacmo",
+    "CertificateName": "",
     //---
-    "DidAuthority": "did:web:...your name...",
+    "DidAuthority": "did:web:ricohimmersionexperience.co.uk",
     //--- The following can be omitted as the app have defaults  
-    "client_name": "Woodgrove Helpdesk",
+    "client_name": "Ricoh Immersion Experience Helpdesk",
     "Purpose": "To prove your identity",
     "includeQRCode": false,
     "includeReceipt": true,
